// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) RewardStatusIndicator (#1047) 2. Pending State: renders pending alert styling and progress copy 1`] = `
<div>
  <div
    data-testid="reward-status-pending"
    style="border-radius: 8px; padding: 14px 18px; margin: 16px 0px; display: flex; align-items: center; justify-content: space-between; font-size: 14px; border: 1px solid #fde68a; background-color: rgb(255, 251, 235); color: rgb(146, 64, 14);"
  >
    <div
      style="display: flex; align-items: center; gap: 10px;"
    >
      <span
        style="display: inline-block; width: 10px; height: 10px; border-radius: 50%; background-color: rgb(245, 158, 11); animation: pulse 1.5s infinite;"
      />
      <div>
        <div>
          <strong>
            Reward Distribution Pending
          </strong>
          <div
            style="font-size: 12px; color: rgb(180, 83, 9); margin-top: 2px;"
          >
            Confirming 
            5.0000000
             
            XLM
             payout on the Stellar network...
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    />
  </div>
</div>
`;

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) RewardStatusIndicator (#1047) 3. Confirmed State: renders success badge, confirmed amount, and transaction hash 1`] = `
<div>
  <div
    data-testid="reward-status-confirmed"
    style="border-radius: 8px; padding: 14px 18px; margin: 16px 0px; display: flex; align-items: center; justify-content: space-between; font-size: 14px; border: 1px solid #a7f3d0; background-color: rgb(236, 253, 245); color: rgb(6, 95, 70);"
  >
    <div
      style="display: flex; align-items: center; gap: 10px;"
    >
      <span
        style="font-size: 16px; font-weight: 700;"
      >
        ✓
      </span>
      <div>
        <div>
          <strong>
            Reward Confirmed!
          </strong>
          <div
            style="font-size: 12px; color: rgb(4, 120, 87); margin-top: 2px;"
          >
            +
            10.0000000
             
            XLM
             received in your linked Stellar wallet.
            <span
              style="margin-left: 6px; font-family: monospace;"
            >
              (tx: 
              a1b2c3...abcdef
              )
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    />
  </div>
</div>
`;

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) RewardStatusIndicator (#1047) 4. Failed State: renders error message and retry button 1`] = `
<div>
  <div
    data-testid="reward-status-failed"
    style="border-radius: 8px; padding: 14px 18px; margin: 16px 0px; display: flex; align-items: center; justify-content: space-between; font-size: 14px; border: 1px solid #fecaca; background-color: rgb(254, 242, 242); color: rgb(153, 27, 27);"
  >
    <div
      style="display: flex; align-items: center; gap: 10px;"
    >
      <span
        style="font-size: 16px; font-weight: 700;"
      >
        ⚠
      </span>
      <div>
        <div>
          <strong>
            Reward Distribution Delayed
          </strong>
          <div
            style="font-size: 12px; color: rgb(185, 28, 28); margin-top: 2px;"
          >
            Insufficient contract pool balance
          </div>
        </div>
      </div>
    </div>
    <div
      style="display: flex; gap: 8px; align-items: center;"
    >
      <button
        style="background-color: rgb(220, 38, 38); color: rgb(255, 255, 255); border-radius: 4px; padding: 6px 12px; font-size: 12px; cursor: pointer; font-weight: 500;"
        type="button"
      >
        Retry
      </button>
      <button
        style="background: none; cursor: pointer; font-size: 16px; line-height: 1;"
        type="button"
      >
        ×
      </button>
    </div>
  </div>
</div>
`;

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) WalletBalanceCard (#1047) 1. Loading State: renders loading indicator and status copy while fetching 1`] = `
<div>
  <div
    data-testid="wallet-balance-loading"
    style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 24px; background-color: rgb(249, 250, 251); text-align: center;"
  >
    <span
      aria-label="Loading"
      class="spinner"
      role="status"
    />
    <p
      style="margin-top: 12px; font-size: 14px; color: rgb(107, 114, 128);"
    >
      Loading Stellar wallet balances...
    </p>
  </div>
</div>
`;

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) WalletBalanceCard (#1047) 2. Error State: renders error alert with message and retry button on fetch rejection 1`] = `
<div>
  <div
    data-testid="wallet-balance-error"
    role="alert"
    style="border-radius: 8px; padding: 24px; background-color: rgb(254, 242, 242); border: 1px solid #fecaca; color: rgb(153, 27, 27);"
  >
    <h4
      style="margin: 0px 0px 8px 0px; font-size: 16px; font-weight: 600;"
    >
      Unable to Load Wallet
    </h4>
    <p
      style="font-size: 14px; margin: 0px 0px 16px 0px;"
    >
      Horizon RPC unreachable or offline
    </p>
    <button
      aria-busy="false"
      aria-disabled="false"
      style="background-color: rgb(220, 38, 38); color: rgb(255, 255, 255);"
      type="button"
    >
      Retry
    </button>
  </div>
</div>
`;

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) WalletBalanceCard (#1047) 3. Empty / Unlinked State: renders unlinked banner and setup call-to-action when wallet not found (404) 1`] = `
<div>
  <div
    data-testid="wallet-balance-unlinked"
    style="border-radius: 8px; padding: 24px; background-color: rgb(255, 255, 255); text-align: center; border: 1px dashed #d1d5db;"
  >
    <h4
      style="margin: 0px 0px 8px 0px; font-size: 16px; font-weight: 600; color: rgb(17, 24, 39);"
    >
      No Stellar Wallet Linked Yet
    </h4>
    <p
      style="font-size: 14px; color: rgb(107, 114, 128); margin: 0px 0px 16px 0px;"
    >
      Connect or create a Stellar wallet to begin earning queue incentive rewards.
    </p>
    <button
      aria-busy="false"
      aria-disabled="false"
      data-testid="setup-wallet-button"
      type="button"
    >
      Set Up Wallet
    </button>
  </div>
</div>
`;

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) WalletBalanceCard (#1047) 4. Populated State: renders active connection status, truncated public key, and native XLM balance 1`] = `
<div>
  <div
    data-testid="wallet-balance-card"
    style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 24px; background-color: rgb(255, 255, 255); box-shadow: 0 1px 3px rgba(0,0,0,0.05);"
  >
    <div
      style="display: flex; justify-content: space-between; align-items: flex-start; margin-bottom: 16px;"
    >
      <div>
        <span
          style="display: inline-block; font-size: 12px; font-weight: 600; text-transform: uppercase; color: rgb(5, 150, 105); background-color: rgb(209, 250, 229); padding: 2px 8px; border-radius: 9999px; margin-bottom: 6px;"
        >
          Stellar Connected
        </span>
        <p
          style="margin: 0px; font-size: 13px; color: rgb(107, 114, 128); font-family: monospace;"
          title="GBRPYHIL2CI3FNQ4BXLFMNDLFJUNPU2HY3ZMFTGOBDKR3GYWUM7AZTQU"
        >
          GBRPYH...7AZTQU
        </p>
      </div>
      <button
        data-testid="refresh-balance-button"
        style="font-size: 12px; background: none; border: 1px solid #d1d5db; border-radius: 4px; padding: 4px 8px; cursor: pointer; color: rgb(55, 65, 81);"
        type="button"
      >
        Refresh
      </button>
    </div>
    <div
      style="margin-top: 16px;"
    >
      <p
        style="margin: 0px 0px 4px 0px; font-size: 12px; color: rgb(107, 114, 128); text-transform: uppercase; letter-spacing: 0.05em;"
      >
        Available Balance
      </p>
      <h3
        data-testid="wallet-xlm-balance"
        style="margin: 0px; font-size: 28px; font-weight: 700; color: rgb(17, 24, 39);"
      >
        250.7500000
         
        <span
          style="font-size: 16px; font-weight: 500; color: rgb(107, 114, 128);"
        >
          XLM
        </span>
      </h3>
    </div>
  </div>
</div>
`;

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) WalletSetup (#1047) 1. Initial Choose State: renders setup options (connect vs generate) 1`] = `
<div>
  <div
    data-testid="wallet-setup-container"
    style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 24px; background-color: rgb(255, 255, 255);"
  >
    <h2
      style="font-size: 18px; font-weight: 600; margin-bottom: 8px;"
    >
      Set Up Your Stellar Wallet
    </h2>
    <p
      style="font-size: 14px; color: rgb(107, 114, 128); margin-bottom: 20px;"
    >
      Connect or create a Stellar account to receive queue incentive rewards directly on-chain.
    </p>
    <div
      style="display: flex; flex-direction: column; gap: 12px;"
    >
      <div
        data-testid="choose-custodial"
        style="padding: 16px; border: 1px solid #d1d5db; border-radius: 6px; cursor: pointer;"
      >
        <h4
          style="margin: 0px; font-size: 15px; color: rgb(17, 24, 39);"
        >
          Option A: Automated Custodial Wallet (Recommended)
        </h4>
        <p
          style="margin: 4px 0px 0px 0px; font-size: 13px; color: rgb(107, 114, 128);"
        >
          Qyou manages the keys automatically. Ideal if you don’t already have a Stellar wallet.
        </p>
      </div>
      <div
        data-testid="choose-non-custodial"
        style="padding: 16px; border: 1px solid #d1d5db; border-radius: 6px; cursor: pointer;"
      >
        <h4
          style="margin: 0px; font-size: 15px; color: rgb(17, 24, 39);"
        >
          Option B: Connect Existing Stellar Wallet
        </h4>
        <p
          style="margin: 4px 0px 0px 0px; font-size: 13px; color: rgb(107, 114, 128);"
        >
          Link your existing public key (Freighter, Albedo, Lobstr, or Ledger).
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) WalletSetup (#1047) 2. Connect Form State: allows typing public key and validates input 1`] = `
<div>
  <div
    data-testid="wallet-setup-container"
    style="border: 1px solid #e5e7eb; border-radius: 8px; padding: 24px; background-color: rgb(255, 255, 255);"
  >
    <h2
      style="font-size: 18px; font-weight: 600; margin-bottom: 8px;"
    >
      Set Up Your Stellar Wallet
    </h2>
    <p
      style="font-size: 14px; color: rgb(107, 114, 128); margin-bottom: 20px;"
    >
      Connect or create a Stellar account to receive queue incentive rewards directly on-chain.
    </p>
    <div
      role="alert"
      style="padding: 12px; background-color: rgb(254, 226, 226); color: rgb(153, 27, 27); border-radius: 6px; margin-bottom: 16px; font-size: 14px;"
    >
      Please provide a valid 56-character Stellar public key starting with G.
    </div>
    <div>
      <label
        for="stellar-public-key"
        style="display: block; font-size: 14px; font-weight: 500; margin-bottom: 6px;"
      >
        Stellar Public Key (starts with G)
      </label>
      <input
        id="stellar-public-key"
        placeholder="GBRPYHIL2CI3FNQ4BXLFMNDLFJUNPU2HY3ZMFTGOBDKR3GYWUM7AZTQU"
        style="width: 100%; padding: 10px 12px; font-size: 14px; border: 1px solid #d1d5db; border-radius: 6px; margin-bottom: 16px; font-family: monospace;"
        type="text"
        value="invalid-stellar-key"
      />
      <div
        style="display: flex; gap: 8px;"
      >
        <button
          aria-busy="false"
          aria-disabled="false"
          data-testid="confirm-link-wallet"
          type="button"
        >
          Link Wallet
        </button>
        <button
          aria-busy="false"
          aria-disabled="false"
          style="background-color: rgb(243, 244, 246); color: rgb(55, 65, 81);"
          type="button"
        >
          Back
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Stellar Web UI Components - Wallet & Reward State Snapshot Tests (#1047) WalletSetup (#1047) 3. Populated / Success State: successfully links wallet and renders confirmation banner 1`] = `
<div>
  <div
    data-testid="wallet-setup-success"
    style="border-radius: 8px; padding: 24px; background-color: rgb(236, 253, 245); border: 1px solid #10b981; text-align: center;"
  >
    <h3
      style="color: rgb(6, 95, 70); margin-bottom: 8px;"
    >
      Stellar Wallet Connected!
    </h3>
    <p
      style="font-size: 14px; color: rgb(4, 120, 87); margin-bottom: 20px; word-break: break-all;"
    >
      <strong>
        Address:
      </strong>
       
      GBRPYHIL2CI3FNQ4BXLFMNDLFJUNPU2HY3ZMFTGOBDKR3GYWUM7AZTQU
    </p>
    <p
      style="color: rgb(4, 120, 87); font-size: 13px; margin-top: 12px;"
    >
      Your account is now eligible to receive Stellar queue incentive rewards.
    </p>
  </div>
</div>
`;
